kubernetes/manifests/ok-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ok-app-service
spec:
  selector:
    env: ok-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
